# pombase-historic-go-stats

./: .gitignore  README.md  process.py  pyproject.toml  pyvenv.cfg  table.parquet  table.tsv
data/: 2001-08-30_pombe_go_process  2001-09-04_pombe_go_comp  2001-09-04_pombe_go_process  2001-09-21_pombe_go_comp  2002-01-19_pombe_go_component  2002-01-19_pombe_go_process  2002-04-14_pombe_go_component  2002-04-14_pombe_go_process  2002-07-25_pombe_go_process  2002-09-18_pombe_go_process  2003-01-17_pombe_go_component  2003-01-17_pombe_go_process  2003-05-13_pombe_go_component  2003-05-13_pombe_go_process  2003-08-13_pombe_go_component  2003-08-13_pombe_go_process  2003-10-02_pombe_go_component  2003-10-02_pombe_go_process  2003-12-05_pombe_go_component_IEA  2003-12-05_pombe_go_function_IEA  2004-02-06_gene_association.GeneDB_Spombe  2004-02-06_pombe_go_comp  2004-02-06_pombe_go_manual  2004-02-06_pombe_go_process  2004-09-07_gene_association.GeneDB_Spombe  2004-09-07_pombe_go_comp  2004-09-07_pombe_go_function  2004-09-07_pombe_go_manual  2004-09-07_pombe_go_process  2005-03-10_gene_association.GeneDB_Spombe  2005-08-16_gene_association.GeneDB_Spombe  2005-08-24_gene_association.GeneDB_Spombe  2005-10-28_gene_association.GeneDB_Spombe  2012-11-07-pombase-build-v2-l1.gaf
duplicate_data/: 2003-10-16_pombe_go_component  2003-10-16_pombe_go_function  2003-10-16_pombe_go_process  2004-02-06_pombe_go_function  2012-11-12-pombase-build-v1-l1.gaf
raw_data/: 2001-08-30_pombe_go_comp  2001-09-21_pombe_go_process  2002-07-25_pombe_go_component  2002-09-18_pombe_go_component  (+9 more)
