[project]
name = "pombase-historic-go-stats"
version = "0.1.0"
description = "Processing code for historic PomBase GAF files"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars",
    "matplotlib",
    "seaborn",
    "pyarrow>=17.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
